tests/lean/type_context.lean.expected.out
hello type_context
hello
hello
type_context.lean:15:0: error: I failed
state:
⊢ true
ff
ff
?m_1
type_context.lean:35:0: error: deep recursion was detected at 'expression replacer' (potential solution: increase stack space in your system)
tt
type_context.lean:42:0: error: deep recursion was detected at 'expression replacer' (potential solution: increase stack space in your system)
type_context.lean:50:0: error: deep recursion was detected at 'expression replacer' (potential solution: increase stack space in your system)
?x_0 = -?x_1 → ?x_1 = -?x_0
[]
[?x_0, ?x_1]
ℕ
theorem my_intro_test : ∀ (x : ℕ), x = x :=
λ (x : ℕ), eq.refl x
?x_1 :: ?x_2
([], [3, [4, 5]])
type_context.lean:170:0: error: failed to unify
state:
2 goals
⊢ true

⊢ Type ?
[]
[hi, there]
[hi]
tt
